force-app/main/default/objects/SVMXC__Stock_History__c/SVMXC__Stock_History__c.object-meta.xml
<CustomObject>
    <description>All ServiceMax transactions such as RMA, Shipment, Parts Receipt etc. that impact inventory are recorded in this object</description>
    <label>Stock History</label>
    <nameField>
        <displayFormat>SHIST-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stock History</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>