force-app/main/default/objects/SVMXC__Stock_History__c/fields/SVMXC__Date_Changed__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Date_Changed__c</fullName>
    <description>Date/time when the change in product stock was made.</description>
    <inlineHelpText>Date/time when the change in product stock was made.</inlineHelpText>
    <label>Date Changed</label>
    <type>DateTime</type>
</CustomField>