force-app/main/default/objects/SVMXC__Stock_History__c/fields/SVMXC__Location__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Current physical location of the product. This is a lookup to an existing site record.</description>
    <inlineHelpText>Current physical location of the product. This is a lookup to an existing site record.</inlineHelpText>
    <label>Location</label>
    <referenceTo>SVMXC__Site__c</referenceTo>
    <relationshipName>Location</relationshipName>
    <type>Lookup</type>
</CustomField>