force-app/main/default/objects/SVMXC__Stock_History__c/fields/SVMXC__Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Partner_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Account, set by trigger.</description>
    <inlineHelpText>Lookup to Partner Account.</inlineHelpText>
    <label>Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Stock History</relationshipLabel>
    <relationshipName>Stock_History</relationshipName>
    <type>Lookup</type>
</CustomField>