force-app/main/default/objects/SVMXC__Stock_History__c/fields/SVMXC__Parts_Request__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Parts_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the Parts Request.</description>
    <inlineHelpText>Reference to the Parts Request.</inlineHelpText>
    <label>Parts Request</label>
    <referenceTo>SVMXC__Parts_Request__c</referenceTo>
    <relationshipName>Stock_History</relationshipName>
    <type>Lookup</type>
</CustomField>