force-app/main/default/objects/SVMXC__Stock_History__c/fields/SVMXC__Product_Serial__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Product_Serial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Select Product Serial</description>
    <inlineHelpText>Select Product Serial</inlineHelpText>
    <label>Product Serial</label>
    <referenceTo>SVMXC__Product_Serial__c</referenceTo>
    <relationshipLabel>Serial History</relationshipLabel>
    <relationshipName>Stock_History</relationshipName>
    <type>Lookup</type>
</CustomField>