force-app/main/default/objects/SVMXC__Stock_History__c/fields/SVMXC__Product_Stock__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Product_Stock__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product Stock record affected by the stock transaction. Reference to an existing product stock record in ServiceMax</description>
    <label>Product Stock</label>
    <referenceTo>SVMXC__Product_Stock__c</referenceTo>
    <relationshipLabel>Stock History (Product Stock)</relationshipLabel>
    <relationshipName>Stock_History</relationshipName>
    <type>Lookup</type>
</CustomField>