force-app/main/default/objects/SVMXC__Stock_History__c/fields/SVMXC__RMA_Line__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__RMA_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the RMA/Shipment Line.</description>
    <inlineHelpText>Reference to the RMA/Shipment Line.</inlineHelpText>
    <label>RMA Line</label>
    <referenceTo>SVMXC__RMA_Shipment_Line__c</referenceTo>
    <relationshipName>Stock_History_RMA_Line</relationshipName>
    <type>Lookup</type>
</CustomField>