force-app/main/default/objects/SVMXC__Stock_History__c/fields/SVMXC__Stock_Value__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Stock_Value__c</fullName>
    <description>Value of the stock quantity at the time of transaction</description>
    <formula>SVMXC__Transaction_Quantity2__c *  SVMXC__Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Value of the stock quantity at the time of transaction</inlineHelpText>
    <label>Stock Value</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>