force-app/main/default/objects/SVMXC__Stock_History__c/recordTypes/SVMXC__Serial_History.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__Serial_History</fullName>
    <active>true</active>
    <description>Serial History</description>
    <label>Serial History</label>
</RecordType>