force-app/main/default/objects/SVMXC__Stock_History__c/recordTypes/SVMXC__Stock_History.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__Stock_History</fullName>
    <active>true</active>
    <description>Stock History</description>
    <label>Stock History</label>
</RecordType>